// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makes demo layers 1`] = `
"<Group> svg { x: 0, y: 0, w: 517, h: 517.96 }
├── <ShapeGroup> Path { x: 0, y: 290.75, w: 133.82, h: 92.42 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 133.82, h: 92.42 }
├── <ShapeGroup> Path { x: 0, y: 290.75, w: 133.82, h: 92.42 }
│   ├── <ShapePath> Path { x: 0, y: 0, w: 133.82, h: 92.42 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 133.82, h: 92.42 }
├── <ShapeGroup> Path { x: 172.33, y: 290.75, w: 133.82, h: 92.42 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 133.82, h: 92.42 }
├── <ShapeGroup> Path { x: 162.71, y: 281.12, w: 153.08, h: 111.68 }
│   ├── <ShapePath> Path { x: 0, y: 0, w: 153.08, h: 111.68 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 153.08, h: 111.68 }
├── <ShapeGroup> Path { x: 363.92, y: 290.75, w: 133.82, h: 92.42 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 133.82, h: 92.42 }
├── <ShapeGroup> Path { x: 344.67, y: 271.5, w: 172.33, h: 130.93 }
│   ├── <ShapePath> Path { x: 0, y: 0, w: 172.33, h: 130.93 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 172.33, h: 130.93 }
├── <ShapeGroup> Path { x: 344.67, y: 0, w: 143.45, h: 139.6 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 143.45, h: 139.6 }
├── <ShapeGroup> Path { x: 344.67, y: 0, w: 143.45, h: 139.6 }
│   ├── <ShapePath> Path { x: 0, y: 0, w: 143.45, h: 139.6 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 143.45, h: 139.6 }
├── <ShapeGroup> Path { x: 158.85, y: 421.69, w: 96.28, h: 96.28 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 96.28, h: 96.28 }
├── <ShapeGroup> Path { x: 274.39, y: 421.69, w: 96.28, h: 96.28 }
│   └── <ShapePath> Path { x: 0, y: 0, w: 96.28, h: 96.28 }
└── <ShapeGroup> Path { x: 389.92, y: 421.69, w: 96.28, h: 96.28 }
    └── <ShapePath> Path { x: 0, y: 0, w: 96.28, h: 96.28 }"
`;

exports[`makes layers 1`] = `
"<Group> svg { x: 0, y: 0, w: 90, h: 90 }
├── <Style>
└── <ShapeGroup> Path { x: 0, y: 0, w: 90, h: 90 }
    ├── <Style>
    │   ├── <Fill> (Color)
    │   │   └── <Color> { red: 0, green: 0.47, blue: 1, alpha: 1 }
    │   └── <Border> (Color)
    │       └── <Color> { red: 0, green: 0, blue: 0, alpha: 1 }
    └── <ShapePath> Path { x: 0, y: 0, w: 90, h: 90 }
        ├── <Style>
        ├── <CurvePoint> { x: 1, y: 0.5 } (Mirrored)
        ├── <CurvePoint> { x: 0.5, y: 1 } (Mirrored)
        ├── <CurvePoint> { x: 0, y: 0.5 } (Mirrored)
        ├── <CurvePoint> { x: 0.5, y: 0 } (Mirrored)
        └── <CurvePoint> { x: 1, y: 0.5 } (Mirrored)"
`;

exports[`makes multiple shapePaths in a shapeGroup 1`] = `
"<Group> svg { x: 0, y: 0, w: 200, h: 200 }
└── <ShapeGroup> Path { x: 0, y: 0, w: 200, h: 200 }
    ├── <ShapePath> Path { x: 0, y: 0, w: 200, h: 200 }
    │   ├── <CurvePoint> { x: 0.5, y: 1 } (Straight)
    │   ├── <CurvePoint> { x: 0, y: 0.5 } (Straight)
    │   └── <CurvePoint> { x: 0.5, y: 0.5 } (Straight)
    └── <ShapePath> Path { x: 0, y: 0, w: 200, h: 200 }
        ├── <CurvePoint> { x: 0.5, y: 0 } (Straight)
        ├── <CurvePoint> { x: 1, y: 0.5 } (Straight)
        └── <CurvePoint> { x: 0.5, y: 0.5 } (Straight)"
`;

exports[`uses viewbox 1`] = `
"<Group> svg { x: 0, y: 0, w: 80, h: 80 }
└── <ShapeGroup> Path { x: 0, y: 0, w: 80, h: 80 }
    ├── <ShapePath> Path { x: 0, y: 0, w: 80, h: 80 }
    │   ├── <CurvePoint> { x: 0.5, y: 1 } (Straight)
    │   ├── <CurvePoint> { x: 0, y: 0.5 } (Straight)
    │   └── <CurvePoint> { x: 0.5, y: 0.5 } (Straight)
    └── <ShapePath> Path { x: 0, y: 0, w: 80, h: 80 }
        ├── <CurvePoint> { x: 0.5, y: 0 } (Straight)
        ├── <CurvePoint> { x: 1, y: 0.5 } (Straight)
        └── <CurvePoint> { x: 0.5, y: 0.5 } (Straight)"
`;
